fixed flex bug on mobile/ minor changes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,6 +106,11 @@ body {
     .tac {
         text-align: center;
     }
+    .content {
+        max-width: 1200px;
+        margin: 150px auto 0;
+        padding: 0 15px;
+    }
 }
 
 
@@ -248,9 +253,9 @@ body {
                 &.has-sub {
                     position: relative;
                     &.open {
-                        .sub-menu {
-                            display: block!important;
-                        }
+                        // .mega-menu {
+                        //     display: block!important;
+                        // }
                     }
                     .toggle {
                         position: absolute;
@@ -318,23 +323,25 @@ body {
                         }
                     }
                     .mega-menu {
-                        display: none;
+                        // display: none;
+                        display: flex!important;
+                        flex-direction: row!important;
+                        .sub-menu {
+                            display: block!important;
+                            // flex-direction: column;
+                        }
                         .column-title {
                             animation: fadeIn .4s ease;
                             animation-delay: .1s;
                             animation-fill-mode: both;
                         }
                     }
-                    .sub-menu {
-                        display: flex!important;
-                        flex-direction: column;
-                    }
                 }
             }
         }
         .mega-menu {
             position: absolute;
-            flex-direction: row!important;
+            // flex-direction: row!important;
             left:0;
             width: 100%;
             background-color: rgba(0,0,0,.95);
